# cocos2d-x

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  squally_engine_changes_summary.txt
cmake/: FindAudioToolbox.cmake  FindMPG123.cmake  FindOgg.cmake  FindVorbis.cmake  FindWebP.cmake  Findchipmunk.cmake  Findxxhash.cmake
cmake/Modules/: CocosBuildModules.cmake  CocosCompileOptions.cmake  CocosPickLibs.cmake  CocosUseLibs.cmake  FindSteam.cmake
cmake/NewModules/: CocosCompileOptions.cmake  FindMPG123.cmake  FindVorbis.cmake  FindWebP.cmake
cocos/: CMakeLists.txt  cocos2d.h  ftoption.h.in  precheader.h
cocos/2d/: CCAction.cpp  CCAction.h  CCActionEase.cpp  CCActionEase.h  CCActionInstant.cpp  CCActionInstant.h  CCActionInterval.cpp  CCActionInterval.h  CCActionManager.h  CCActionTween.h  CCAnimation.cpp  CCAnimation.h  CCAnimationCache.cpp  CCAtlasNode.cpp  CCAtlasNode.h  CCAutoPolygon.cpp  CCCamera.cpp  CCCamera.h  CCCameraBackgroundBrush.cpp  CCCameraBackgroundBrush.h  CCClippingNode.cpp  CCClippingNode.h  CCClippingRectangleNode.cpp  CCDrawNode.cpp  CCDrawNode.h  CCDrawingPrimitives.cpp  CCDrawingPrimitives.h  CCFastTMXLayer.cpp  CCFastTMXLayer.h  CCFastTMXTiledMap.cpp  CCFastTMXTiledMap.h  CCFontAtlas.cpp  CCFontAtlas.h  CCFontAtlasCache.cpp  CCFontAtlasCache.h  CCFontFNT.cpp  CCFontFreeType.cpp  CCFontFreeType.h  CCGrid.cpp  CCLabel.cpp  (+40 more)
cocos/3d/: CCBundle3D.h
cocos/audio/: AudioEngine.cpp  CMakeLists.txt
cocos/audio/linux/: AudioCache.cpp  AudioDecoderManager.cpp  AudioDecoderMp3.cpp  AudioEngine-linux.cpp  AudioPlayer.cpp
cocos/audio/mac/: AudioCache.h  AudioCache.mm  AudioDecoder.h  AudioDecoder.mm  AudioEngine-inl.h  AudioEngine-inl.mm  AudioPlayer.h  AudioPlayer.mm  CDAudioManager.h  CDAudioManager.m  CDOpenALSupport.h  CDOpenALSupport.m  CDXMacOSXSupport.h  CDXMacOSXSupport.mm  CocosDenshion.h  CocosDenshion.m  SimpleAudioEngine_objc.h  SimpleAudioEngine_objc.m
cocos/audio/win32/: AudioCache.cpp  AudioCache.h  AudioDecoderManager.cpp  AudioDecoderMp3.cpp  AudioEngine-win32.cpp  AudioPlayer.cpp  AudioPlayer.h
cocos/base/: CCAsyncTaskPool.h  CCAutoreleasePool.cpp  CCAutoreleasePool.h  CCConfiguration.cpp  CCConfiguration.h  CCConsole.cpp  CCConsole.h  CCController-apple.mm  CCController-linux-win32.cpp  CCController.cpp  CCController.h  CCDirector.cpp  CCDirector.h  CCEvent.cpp  CCEvent.h  CCEventController.cpp  CCEventController.h  CCEventCustom.cpp  CCEventCustom.h  CCEventDispatcher.cpp  CCEventDispatcher.h  CCEventFocus.cpp  CCEventFocus.h  CCEventListener.cpp  CCEventListener.h  CCEventListenerCustom.cpp  CCEventListenerCustom.h  CCEventListenerFocus.cpp  CCEventListenerFocus.h  CCGameController.h  CCIMEDelegate.h  CCIMEDispatcher.cpp  CCIMEDispatcher.h  CCInputEvents.cpp  CCInputEvents.h  CCNinePatchImageParser.cpp  CCNinePatchImageParser.h  CCProfiling.cpp  CCProperties.cpp  CCRef.cpp  (+23 more)
cocos/base/allocator/: CCAllocatorGlobalNewDelete.cpp  CCAllocatorMutex.h
cocos/deprecated/: CCString.h
cocos/editor-support/cocostudio/: CCDataReaderHelper.h  CocoLoader.h  LocalizationManager.h
cocos/math/: CCAffineTransform.cpp  CCAffineTransform.h  CCGeometry.cpp  CCGeometry.h  Mat4.cpp  Mat4.h  MathUtil.cpp  MathUtil.h  MathUtilSSE.inl  Vec2.h  Vec2.inl  Vec4.h
cocos/network/: CCDownloader.cpp  HttpAsynConnection-apple.h  HttpAsynConnection-apple.m  HttpClient-apple.mm  HttpRequest.h  WebSocket.cpp
cocos/physics/: CCPhysicsBody.cpp  CCPhysicsBody.h  CCPhysicsShape.cpp  CCPhysicsWorld.cpp  CCPhysicsWorld.h  CMakeLists.txt
cocos/physics/chipmunk/: chipmunk.h  cpBody.cpp  cpSpace.h  cpSpaceDebug.cpp
cocos/platform/: CCApplication.h  CCApplicationProtocol.h  CCCommon.h  CCDevice.h  CCFileUtils.cpp  CCFileUtils.h  CCGL.h  CCGLView.cpp  CCGLView.h  CCImage.cpp  CCImage.h  CCPlatformDefine.h  CCPlatformMacros.h  CCSAXParser.cpp  CCSAXParser.h  CCStdC.h  CCThread.cpp  CMakeLists.txt
cocos/platform/apple/: CCFileUtils-apple.mm
cocos/platform/desktop/: CCGLViewImpl-desktop.cpp  CCGLViewImpl-desktop.h
cocos/platform/linux/: CCApplication-linux.cpp  CCApplication-linux.h  CCCommon-linux.cpp  CCDevice-linux.cpp  CCFileUtils-linux.cpp  CCFileUtils-linux.h  CCGL-linux.h  CCPlatformDefine-linux.h  CCStdC-linux.h
cocos/platform/mac/: CCApplication-mac.h  CCApplication-mac.mm  CCCommon-mac.mm  CCDevice-apple.mm  CCDevice-mac.mm  CCFileUtils-apple.h  CCFileUtils-apple.mm  CCGL-mac.h  CCLock-apple.cpp  CCPlatformDefine-mac.h  CCStdC-mac.h  CCThread-apple.mm  cocos2d-prefix.pch
cocos/platform/win32/: CCApplication-win32.cpp  CCApplication-win32.h  CCCommon-win32.cpp  CCDevice-win32.cpp  CCFileUtils-win32.cpp  CCFileUtils-win32.h  CCStdC-win32.cpp  CCStdC-win32.h  CCUtils-win32.cpp
cocos/renderer/: CCBatchCommand.cpp  CCFrameBuffer.cpp  CCFrameBuffer.h  CCGLProgram.cpp  CCGLProgram.h  CCGLProgramCache.cpp  CCGLProgramCache.h  CCGLProgramState.cpp  CCGLProgramState.h  CCGLProgramStateCache.cpp  CCGLProgramStateCache.h  CCMaterial.cpp  CCPass.cpp  CCPrimitiveCommand.cpp  CCQuadCommand.cpp  CCRenderCommand.cpp  CCRenderCommand.h  CCRenderState.cpp  CCRenderer.cpp  CCRenderer.h  CCTexture2D.cpp  CCTexture2D.h  CCTextureAtlas.cpp  CCTextureAtlas.h  CCTextureCache.cpp  CCTextureCache.h  CCTrianglesCommand.cpp  CCTrianglesCommand.h  CCVertexIndexBuffer.cpp  CMakeLists.txt  ccGLStateCache.h  ccShaders.cpp  ccShaders.h
cocos/ui/: CMakeLists.txt  UIHelper.cpp  UIHelper.h  UIRichText.cpp  UIRichText.h  UITextField.cpp  UITextField.h  UIWidget.cpp  UIWidget.h
extensions/: CMakeLists.txt  cocos-ext.h
extensions/SpriterPlusPlus/: CCAnimationNode.cpp  CCAnimationNode.h  CCBoneInstanceInfo.cpp  CCBoneInstanceInfo.h  CCBoxInstanceInfo.cpp  CCBoxInstanceInfo.h  CCFileFactory.cpp  CCFileFactory.h  CCImageFile.cpp  CCImageFile.h  CCObjectFactory.cpp  CCObjectFactory.h  CCPointInstanceInfo.cpp  CCPointInstanceInfo.h  CCSoundFile.cpp  CCSoundFile.h  CCSoundObjectInfoReference.cpp  CCSoundObjectInfoReference.h  CCTriggerObjectInfo.cpp  CCTriggerObjectInfo.h  TinyXmlSpriterFileAttributeWrapper.cpp  TinyXmlSpriterFileAttributeWrapper.h  (+4 more)
templates/: cocos2dx_files.json
(+8 files in other folders)
